# Hybrid-Genome-Assembler

./: .gitignore  README.md  notes
data/: .gitignore
data/sequences/: artificial_size=500000_A.fasta  artificial_size=500000_B.fasta  ecoli-w3110.fa
src/: .gitignore  CMakeLists.txt  CategorizeReads.cpp  DNAStructures.cpp  DNAStructures.h  FindEigen2.cmake  GenomeReadCluster.cpp  GenomeReadCluster.h  KmerAnalysis.cpp  KmerAnalysis.h  KmerAnalysisWriter.cpp  KmerAnalysisWriter.h  KmerCountingBloomFilter.cpp  KmerCountingBloomFilter.h  KmerIterator.cpp  KmerIterator.h  KmerOccurences.cpp  KmerOccurrences.cpp  MG_UTI_LOG_0.15  MainPipeline.cpp  Playground.cpp  ReadCategorizer.cpp  ReadCategorizer.h  ReadClustering.cpp  ReadClustering.h  ReadClusteringEngine.cpp  ReadClusteringEngine.h  ReadDataLoader.cpp  ReadDataLoader.h  SequenceReader.cpp  SequenceReader.h  SequenceRecordIterator.cpp  SequenceRecordIterator.h  Utils.cpp  Utils.h  constants.py  consts.h  find_in_reference.cpp  general_pipeline.py  graph_pls  (+13 more)
src/clustering/: GenomeReadCluster.h  ReadClusteringEngine.cpp  ReadClusteringEngine.h  ReadComponent.h
src/common/: BaseReadClusteringEngine.cpp  BaseReadClusteringEngine.h  GenomeReadCluster.cpp  GenomeReadCluster.h  KmerAnalysis.cpp  KmerAnalysis.h  KmerBloomFilter.cpp  KmerBloomFilter.h  KmerCountingBloomFilter.cpp  KmerCountingBloomFilter.h  KmerIterator.cpp  KmerIterator.h  KmerOccurrenceCounter.cpp  KmerOccurrenceCounter.h  Plotting.cpp  Plotting.h  ReadClusteringEngine.cpp  ReadClusteringEngine.h  SequenceRecordIterator.cpp  SequenceRecordIterator.h  Types.h  Utils.cpp  Utils.h
src/common/python/: plot.py  plot_connections_histogram.py  plot_histogram.py
src/data/: .gitignore
src/lib/: .gitignore  BloomFilter.cpp  BloomFilter.h  CountingBloomFilter.cpp  CountingBloomFilter.h  FindPeaks.cpp  HyperLogLog.hpp  KernighanLin.cpp  KernighanLin.h  QuickCut.cpp  QuickCut.h
src/lib/clustering/: ClusterRotate.cpp  ClusterRotate.h  Evrot.h  Kmeans.h  SpectralClustering.cpp  SpectralClustering.h
src/occurrences/: JellyfishOccurrenceReader.cpp  JellyfishOccurrenceReader.h  KmerAnalysis.cpp  KmerAnalysis.h  KmerOccurrenceCounter.cpp  KmerOccurrenceCounter.h  run_jellyfish.sh
src/playground/: KL.cpp  Playground.cpp  graph  iter.cpp  kmerge.cpp
src/production/: KmerAnalysis.cpp  KmerAnalysis.h  MainPipeline.cpp  ReadClusteringEngine.cpp  ReadClusteringEngine.h
src/python_scripts/: hga  kmer_categorizer.py  mix_reads.py  pipeline.py  plot_connections_histogram.py  plot_histogram.py  read_categorizer.py  simulate_data.py  tests.py  utils.py
src/python_scripts/test_data/: hga_analysis  hga_count.fa  in.fasta  python_analysis  python_count.fa
src/scripts/: assemble_cluster.sh  assemble_pacbio_cluster.sh  plotting.py  read_generator.py  spectral_example.py  visualize.html  visualize_tree.html
src/testing/: GenomeReadCluster.cpp  GenomeReadCluster.h  KernighanLinClustering.cpp  KernighanLinClustering.h  KmerAnalysis.cpp  KmerAnalysis.h  MainPipeline.cpp  ReadClusteringEngine.cpp  ReadClusteringEngine.h  TestKmerAnalysis.cpp  TestKmerAnalysis.h  TestReadClusteringEngine.cpp  TestReadClusteringEngine.h
writing/: Categorization.tex  Complexity  Conclusion.tex  Dataset.tex  DiscriminativeKmers.tex  Evaluation.txt  Implementation.tex  Introduction.tex  ProblemStatement.tex  literatura.bib  main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc
writing/snippets/: amplification.py  approximate_overlap.py  connection.py  distance_bfs.py  intersect_sorted_arrays.py  merge_n_arrays.py  overlap_intervals.py  tail_vertices.py  unique_k_length.py
